@@ -8,8 +8,12 @@ ENV SPRING_HOME=/home/spring
 RUN groupadd -g 1000 ${group} \
 	&& useradd -d "$SPRING_HOME" -u 1000 -g 1000 -m -s /bin/bash ${user} \
 	&& mkdir -p $SPRING_HOME/config \
-	&& mkdir -p $SPRING_HOME/logs \
-	&& chown -R ${user}:${group} $SPRING_HOME/config $SPRING_HOME/logs
+	&& mkdir -p $SPRING_HOME/logs
+
+COPY docker-entrypoint.sh $SPRING_HOME/docker-entrypoint.sh
+
+RUN chmod +x $SPRING_HOME/docker-entrypoint.sh \
+	&& chown -R ${user}:${group} $SPRING_HOME
 
 # Railway 不支持使用 VOLUME, 本地需要构建时，取消下一行的注释
 # VOLUME ["$SPRING_HOME/config", "$SPRING_HOME/logs"]
@@ -23,12 +27,8 @@ RUN mvn clean package \
     && mv target/midjourney-proxy-*.jar ./app.jar \
     && rm -rf target
 
-EXPOSE 8080 9876
+EXPOSE 8080
 
-ENV JAVA_OPTS -XX:MaxRAMPercentage=85 -Djava.awt.headless=true -XX:+HeapDumpOnOutOfMemoryError \
- -XX:MaxGCPauseMillis=20 -XX:InitiatingHeapOccupancyPercent=35 -Xlog:gc:file=/home/spring/logs/gc.log \
- -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.port=9876 -Dcom.sun.management.jmxremote.ssl=false \
- -Dcom.sun.management.jmxremote.authenticate=false -Dlogging.file.path=/home/spring/logs \
- -Dserver.port=8080 -Duser.timezone=Asia/Shanghai
+ENV JAVA_OPTS=""
 
-ENTRYPOINT ["bash","-c","java $JAVA_OPTS -jar app.jar"]
+ENTRYPOINT ["/home/spring/docker-entrypoint.sh"]
